--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>Calculatrice_0</artifactId>
+    <artifactId>Calculatrice</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Calculatrice_0</name>
+    <name>Calculatrice</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
